Additional tasks for Next

--- a/docs/session-notes/2025-09-20-session.md
+++ b/docs/session-notes/2025-09-20-session.md
@@ -13,3 +13,5 @@
 - Apply the migration in Supabase SQL Editor and verify create/update with empty or ISO date inputs.
 - Optionally expose maintenance cycle/next-date inputs in the dialog UI.
 - Refresh session after role/tenant changes to sync JWT claims.
+- Branding Forms feature for Repair Request Sheet.
+- Scrollable area for Repair request dialog.
