Refactor Equipment Detail Dialog

--- a/docs/session-notes/2025-09-20-session.md
+++ b/docs/session-notes/2025-09-20-session.md
@@ -10,8 +10,8 @@
   - Added maintenance fields with normalization: `ngay_bt_tiep_theo`, `ngay_hc_tiep_theo`, `ngay_kd_tiep_theo`; and cycles `chu_ky_bt_dinh_ky`, `chu_ky_hc_dinh_ky`, `chu_ky_kd_dinh_ky`.
 
 ## Pending/Next
-- Apply the migration in Supabase SQL Editor and verify create/update with empty or ISO date inputs.
-- Optionally expose maintenance cycle/next-date inputs in the dialog UI.
+- Apply the migration in Supabase SQL Editor and verify create/update with empty or ISO date inputs. [done]
+- Optionally expose maintenance cycle/next-date inputs in the dialog UI. [do not apply]
 - Refresh session after role/tenant changes to sync JWT claims.
 - Branding Forms feature for Repair Request Sheet.
-- Scrollable area for Repair request dialog.
+- Scrollable area for Repair request dialog. [done]
